--- a/index.html
+++ b/index.html
@@ -12,21 +12,27 @@
     <!-- Дата выполнения задания 08.10.2021 -->
 </head>
 <body>
-    <div class="container-fluid">
-        <header class="header-roof">
-            <div class="container padding">
-                <div class="header-roof__flex container-1">
-                    <a class="header-roof__logo" href="/"><img src="img/logo/logo.svg" alt="logo"/></a>
-                    <div class="header-roof__contacts">
+    <div class="wrapper">
+        <header class="container-fluid">
+            <div class="container-xxl">
+                <div class="row justify-content-center align-items-center ms-sm-5 px-5 py-4 header-roof">
+                    <div class="col-sm-2 d-flex justify-content-center justify-content-sm-start">
+                        <a class="header-roof__logo" href="/"><img src="img/logo/logo.svg" alt="logo"/></a>
+                    </div>
+                    <div class="col-sm-6 p-3 d-flex flex-column justify-content-center align-items-center align-items-sm-end header-roof__contacts">
                         <a href="tel:+80500000000">Тел.: +8050 000 00 00</a>
                         <a href="mailto:mail@uchu.online">Email: mail@uchu.online</a>
                     </div>
-                    <a class="header-roof__enter" href="#"><span>Войти</span></a>
+                    <div class="col-sm-3">
+                        <a class="header-roof__enter" href="#">
+                            <span>Войти</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </header>
         <header class="header-floor">
-            <div class="header-floor__back container">
+            <div class="container-xxl header-floor__back">
                 <div class="container-1">
                     <div class="header-floor__text-1">
                         Дополнительная профессиональная программа повышения квалификации
@@ -108,7 +114,7 @@
                 </div>
             </section>
             <section>
-                <div class="section-2__back container">
+                <div class="section-2__back container-2">
                     <div class="container-1">
                         <div class="section-2__main-title">ХОД ОБУЧЕНИЯ:</div>
                         <div class="marks-3">
