--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Обучение по повышению квалификации"/>
     <title>Обучение по повыщению квалификации</title>
     <!-- <link rel="stylesheet" href="css/style.css"/> -->
-    <link rel="stylesheet" href="css/bootstrap_5-grid.css"/>
+    <link rel="stylesheet" href="css/bootstrap_5.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <!-- Дата выполнения задания 08.10.2021 -->
 </head>
@@ -33,49 +33,65 @@
         </header>
         <header class="header-floor">
             <div class="container-xxl header-floor__back">
-                <div class="container-1">
-                    <div class="header-floor__text-1">
-                        Дополнительная профессиональная программа повышения квалификации
-                    </div>
-                    <div class="header-floor__text-2">
-                        ДИСТАНЦИОННЫЕ ОБРАЗОВАТЕЛЬНЫЕ ТЕХНОЛОГИИ ПРОФЕССИОНАЛЬНОГО И ДОПОЛНИТЕЛЬНОГО
-                        ПРОФЕССИОНАЛЬНОГО ОБРАЗОВАНИЯ
-                    </div>
-                    <div class="header-floor__text-3">
-                        <span>КАТЕГОРИИ СЛУШАТЕЛЕЙ:</span>
-                        педагогические работники организаций, реализующих программы СПО
-                    </div>
-                    <div class="header-floor__bottom">
-                        <div class="header-floor__marks-flex">
-                            <div class="header-floor__marks">
-                                <div class="mark-1">
-                                    <img src="img/icon/svg/head_1_time_clean.svg" alt="Часы">
-                                </div>
-                                <div class="header-floor__marks-title-1">
-                                    <div class="header-floor__marks-text-1">Объем</div>
-                                    <div class="header-floor__marks-text-2">16 часов</div>
-                                </div>
+                <div class="row">
+                    <div class="col-lg-7 col-xl-">
+                        <div class="row me-lg-5 mt-5">
+                            <div class="col-lg-12 text-center text-lg-start mb-2 pe-lg-5 header-floor__text-1">
+                                Дополнительная профессиональная программа повышения квалификации
                             </div>
-                            <div class="header-floor__marks">
-                                <div class="mark-1"><img src="img/icon/svg/head_1_book_clean.svg" alt="Книга"></div>
-                                <div class="header-floor__marks-title-2">
-                                    <div class="header-floor__marks-text-1">Форма обучения:</div>
-                                    <div class="header-floor__marks-text-2">
-                                        очная с применением дистанционных образовательных технологий
+                            <div class="col-lg-12 text-center text-lg-start mb-2 pe-lg-5 me-lg-5 header-floor__text-2">
+                                ДИСТАНЦИОННЫЕ ОБРАЗОВАТЕЛЬНЫЕ ТЕХНОЛОГИИ ПРОФЕССИОНАЛЬНОГО И ДОПОЛНИТЕЛЬНОГО
+                                ПРОФЕССИОНАЛЬНОГО ОБРАЗОВАНИЯ
+                            </div>
+                            <div class="col-lg-12 text-center text-lg-start mb-3 mb-md-5 pe-lg-5 header-floor__text-3">
+                                <span>КАТЕГОРИИ СЛУШАТЕЛЕЙ:</span>
+                                педагогические работники организаций, реализующих программы СПО
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center flex-column flex-md-row">
+                    <div class="col-8 col-md-6 col-lg-12 mb-3 mb-md-5 mb-lg-0">
+                        <div class="header-floor__img d-lg-none">
+                            <img src="/img/content/woman.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="row pb-5 ps-3">
+                            <div class="col-lg-2 d-flex mb-3 mb-lg-0">
+                                <div class="row flex-lg-column flex-xl-row justify-content-start">
+                                    <div class="col d-flex justify-content-center align-items-center mark-1">
+                                        <img src="img/icon/svg/head_1_time_clean.svg" alt="Часы">
+                                    </div>
+                                    <div class="col header-floor__marks-title-1">
+                                        <div class="header-floor__marks-text-1">Объем</div>
+                                        <div class="header-floor__marks-text-2">16 часов</div>
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-lg-4 col-xl-4 d-flex mb-3 mb-md-5 mb-lg-0">
+                                <div class="row flex-lg-column flex-xl-row">
+                                    <div class="col d-flex justify-content-center align-items-center mark-1">
+                                        <img src="img/icon/svg/head_1_book_clean.svg" alt="Книга">
+                                    </div>
+                                    <div class="col header-floor__marks-title-2">
+                                        <div class="header-floor__marks-text-1">Форма обучения:</div>
+                                        <div class="header-floor__marks-text-2">очная с применением дистанционных образовательных технологий</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5 d-flex align-items-end justify-content-center justify-content-xl-start">
+                                <a class="d-flex align-items-center justify-content-center header-floor__btm" href="#">
+                                    <div>ПОДАТЬ ЗАЯВКУ</div>
+                                </a>
+                            </div>
                         </div>
-                        <a class="header-floor__btm" href="#">
-                            <img src="img/icon/svg/head_1_arrow.svg" alt="Стрелка">
-                            <span>ПОДАТЬ ЗАЯВКУ</span>
-                        </a>
                     </div>
                 </div>
             </div>
         </header>
         <main>
-            <section class="section-1__flex container-1">
+            <section class="section-1__flex container-xxl">
                 <div class="section-1__main-title">Дистанционные образовательные технологии</div>
                 <div class="section-1__parts">
                     <div class="section-1__part-1"><img src="img/content/people_work.png" alt="Люди за учебой">
@@ -114,8 +130,8 @@
                 </div>
             </section>
             <section>
-                <div class="section-2__back container-2">
-                    <div class="container-1">
+                <div class="section-2__back">
+                    <div class="container-xxl">
                         <div class="section-2__main-title">ХОД ОБУЧЕНИЯ:</div>
                         <div class="marks-3">
                             <div class="marks-3__pieces">
