--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="row align-items-center flex-column flex-md-row">
                     <div class="col-8 col-md-6 col-lg-12 mb-3 mb-md-5 mb-lg-0">
                         <div class="header-floor__img d-lg-none">
-                            <img src="/img/content/smoke.png" alt="woman">
+                            <img src="img/content/woman.png" alt="woman">
                         </div>
                     </div>
                     <div class="col">
