--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="col-sm-3">
                         <a class="header-roof__enter" href="#">
-                            <span>Войти</span>
+                            <div>Войти</div>
                         </a>
                     </div>
                 </div>
