--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="row align-items-center flex-column flex-md-row">
                     <div class="col-8 col-md-6 col-lg-12 mb-3 mb-md-5 mb-lg-0">
                         <div class="header-floor__img d-lg-none">
-                            <img src="img/content/woman.png" alt="woman">
+                            <img src="img/content/woman_elements.png" alt="woman">
                         </div>
                     </div>
                     <div class="col">
@@ -63,7 +63,7 @@
                                     <div class="col d-flex justify-content-center align-items-center mark-1">
                                         <img src="img/icon/svg/head_1_time_clean.svg" alt="Часы">
                                     </div>
-                                    <div class="col header-floor__marks-title-1">
+                                    <div class="col">
                                         <div class="header-floor__marks-text-1">Объем</div>
                                         <div class="header-floor__marks-text-2">16 часов</div>
                                     </div>
@@ -74,7 +74,7 @@
                                     <div class="col d-flex justify-content-center align-items-center mark-1">
                                         <img src="img/icon/svg/head_1_book_clean.svg" alt="Книга">
                                     </div>
-                                    <div class="col header-floor__marks-title-2">
+                                    <div class="col">
                                         <div class="header-floor__marks-text-1">Форма обучения:</div>
                                         <div class="header-floor__marks-text-2">очная с применением дистанционных образовательных технологий</div>
                                     </div>
