--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="col">
                         <div class="row pb-5 ps-3">
-                            <div class="col-lg-2 d-flex mb-3 mb-lg-0">
+                            <div class="col-sm-4 col-lg-2 d-flex mb-3 mb-lg-0">
                                 <div class="row flex-lg-column flex-xl-row justify-content-start">
                                     <div class="col d-flex justify-content-center align-items-center mark-1">
                                         <img src="img/icon/svg/head_1_time_clean.svg" alt="Часы">
@@ -69,7 +69,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-xl-4 d-flex mb-3 mb-md-5 mb-lg-0">
+                            <div class="col-sm-8 col-lg-4 col-xl-4 d-flex mb-3 mb-md-5 mb-lg-0">
                                 <div class="row flex-lg-column flex-xl-row">
                                     <div class="col d-flex justify-content-center align-items-center mark-1">
                                         <img src="img/icon/svg/head_1_book_clean.svg" alt="Книга">
