--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="col">
                     <div class="row pb-5 ps-3">
-                        <div class="col-sm-4 col-lg-2 d-flex mb-3 mb-lg-0">
+                        <div class="col-sm-4 col-md-12 col-lg-2 d-flex mb-3 mb-lg-0">
                             <div class="row flex-lg-column flex-xl-row justify-content-start">
                                 <div class="col d-flex justify-content-center align-items-center mark-1">
                                     <img src="img/icon/svg/head_1_time_clean.svg" alt="Часы">
@@ -68,7 +68,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-8 col-lg-4 col-xl-4 d-flex mb-3 mb-md-5 mb-lg-0">
+                        <div class="col-sm-8 col-md-12 col-lg-4 col-xl-4 d-flex mb-3 mb-md-5 mb-lg-0">
                             <div class="row flex-lg-column flex-xl-row">
                                 <div class="col d-flex justify-content-center align-items-center mark-1">
                                     <img src="img/icon/svg/head_1_book_clean.svg" alt="Книга">
@@ -90,37 +90,60 @@
         </div>
     </header>
     <main>
-        <section class="section-1__flex container-xxl">
-            <div class="section-1__main-title">Дистанционные образовательные технологии</div>
-            <div class="section-1__parts">
-                <div class="section-1__part-1"><img src="img/content/people_work.png" alt="Люди за учебой">
+        <section class="container-xxl">
+            <div class="ms-xl-5 ps-xl-5 mt-5 section-1__main-title">Дистанционные образовательные технологии</div>
+            <div class="row ms-xl-5 ps-xl-5 section-1__parts">
+                <div class="col-xl-8 mb-5 section-1__part-1">
+                    <img src="img/content/people_work.png" alt="Люди за учебой">
                 </div>
-                <div class="section-1__part-2">
-                    <div class="section-1__part-2-title-1">ПРЕИМУЩЕСТВА ОБУЧЕНИЯ:</div>
-                    <ul class="section-1__part-2-list-1">
-                        <li>Дистанционное обучение</li>
-                        <li>Выдача удостоверения установленного образца о повышении квалификации</li>
-                        <li>Онлайн-платформа</li>
-                    </ul>
-                    <div class="section-1__part-2-list-2">
-                        <div class="section-1__part-2-title-2">Обучение проходит в удобное для Вас время</div>
-                        <div class="marks-2">
-                            <div class="marks-2__flex">
-                                <div class="mark-2">
-                                    <img src="img/icon/svg/sect_1_house_clean.svg" alt="Учеба">
-                                </div>
-                                <div class="section-1__marks-title">
-                                    <div class="section-1__marks-text-1">4 дня:</div>
-                                    <div class="section-1__marks-text-2">по 3-4 часа в день</div>
+                <div class="col col-xl-4 ms-md-5 ms-xl-0 ps-md-5 ps-xl-0 pe-md-5 d-flex flex-column flex-md-row flex-xl-column justify-content-center align-items-center align-items-md-start">
+                    <div class="row justify-content-center justify-content-md-start">
+                        <div class="col-8 col-md-12">
+                            <div class="row flex-column">
+                                <div class="col ms-4 mb-4 section-1__part-2-title-1">ПРЕИМУЩЕСТВА ОБУЧЕНИЯ:</div>
+                                <div class="col">
+                                    <ul class=" row flex-column section-1__part-2-list-1">
+                                        <li class="col mb-4">Дистанционное обучение</li>
+                                        <li class="col mb-4">Выдача удостоверения установленного образца о повышении квалификации</li>
+                                        <li class="col">Онлайн-платформа</li>
+                                    </ul>
                                 </div>
                             </div>
-                            <div class="marks-2__flex">
-                                <div class="mark-2">
-                                    <img src="img/icon/svg/sect_1_book_clean.svg" alt="Аттестация">
-                                </div>
-                                <div class="section-1__marks-title">
-                                    <div class="section-1__marks-text-1">5-й день</div>
-                                    <div class="section-1__marks-text-2">итоговая аттестация</div>
+                        </div>
+                    </div>
+                    <div class="row mb-5 justify-content-center justify-content-md-start">
+                        <div class="col-8 col-md-12">
+                            <div class="row ms-4 ps-4 flex-column section-1__part-2-list-2">
+                                <div class="col mb-4 section-1__part-2-title-2">Обучение проходит в удобное для Вас время</div>
+                                <div class="col">
+                                    <div class="row flex-column marks-2">
+                                        <div class="col">
+                                            <div class="row mb-4">
+                                                <div class="col d-flex justify-content-center align-items-center mark-2">
+                                                    <img src="img/icon/svg/sect_1_house_clean.svg" alt="Учеба">
+                                                </div>
+                                                <div class="col">
+                                                    <div class="row flex-column section-1__marks-title">
+                                                        <div class="col section-1__marks-text-1">4 дня:</div>
+                                                        <div class="col section-1__marks-text-2">по 3-4 часа в день</div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col">
+                                            <div class="row">
+                                                <div class="col d-flex justify-content-center align-items-center mark-2">
+                                                    <img src="img/icon/svg/sect_1_book_clean.svg" alt="Аттестация">
+                                                </div>
+                                                <div class="col">
+                                                    <div class="row flex-column section-1__marks-title">
+                                                        <div class=" col section-1__marks-text-1">5-й день</div>
+                                                        <div class="col section-1__marks-text-2">итоговая аттестация</div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -129,8 +152,8 @@
             </div>
         </section>
         <section>
-            <div class="section-2__back">
-                <div class="container-xxl">
+            <div class="container-xxl section-2__back">
+                <div>
                     <div class="section-2__main-title">ХОД ОБУЧЕНИЯ:</div>
                     <div class="marks-3">
                         <div class="marks-3__pieces">
@@ -186,7 +209,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container-1">
+        <div class="container-xxl">
             <div class="footer__row">
                 <div class="footer__text">
                     <a href="mailto:mail@uchu.online">mail@uchu.online</a>
