--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Обучение по повышению квалификации"/>
     <title>Обучение по повыщению квалификации</title>
     <!-- <link rel="stylesheet" href="css/style.css"/> -->
-    <link rel="stylesheet" href="css/bootstrap_5.css"/>
+    <link rel="stylesheet" href="css/bootstrap_5.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <!-- Дата выполнения задания 08.10.2021 -->
 </head>
